--- a/crash.html
+++ b/crash.html
@@ -13,7 +13,7 @@
         }
 
         // hlídací smyčka
-        async function loop() {
+        function loop() {
             while (true) {
                 if (test === true) {
                     // tady spustíme nekonečný blokující cyklus
